# ABE

./: .gitlab-ci.yml  .gitmodules  CMakeLists.User.txt  CMakeLists.txt  PALISADEabeConfig.cmake.in  PALISADEabeConfigVersion.cmake.in  PalisadeConfig.cmake.in  README.md  Release_Notes.md  TODO.md
benchmark/: CMakeLists.txt
src/TA15/: CMakeLists.txt  CPPLINT.cfg
src/TA15/examples/: cpa-abe.cpp  test.cpp
src/TA15/include/: abecontext.h  abecore.h  abeparamset.h  cpabe.h
src/TA15/lib/: abecontext-impl.cpp  abecontext.cpp  abecore-impl.cpp  cpabe-impl.cpp  cpabe.cpp
src/TA15/unittest/: UnitTestCPABE.cpp
src/abe/: CMakeLists.txt
src/abe/examples/: cpa-abe.cpp  keygen.cpp  setup.cpp  time-test.cpp
src/abe/include/: abecontext.h  abecore.h  cpabe.h
src/abe/lib/: abecontext.cpp  cpabe.cpp
src/signature/: CMakeLists.txt
src/signature/include/: gpv.h  signaturecore.h
src/trapdoor/: CMakeLists.txt
src/trapdoor/examples/: palisade-tbo-conj-40.cpp  palisade-tbo-gbp-32.cpp  palisade-tbo-linear.cpp  palisade-vbb-conj-40.cpp  palisade-vbb-conj.cpp  rns-kp-abe.cpp
src/trapdoor/extras/: DCRTCHCPRF.cpp  DCRTCHCPRFBP.cpp  DCRTObfuscateBitTesterV3.cpp  DCRTObfuscateEvalV4.cpp  DCRTObfuscateGenV4.cpp  GSW.cpp  SubgaussianKPABE.cpp  SubgaussianUnitTest.cpp  oakland-conj-32.cpp  oakland-conj-64.cpp  oakland-gbp-32.cpp  oakland-linear.cpp  oakland-vbb-conj-32.cpp  oakland-vbb-conj-64.cpp  run-ec19-GSW.cpp  run-ec19-noise.cpp  run-ec19-subgaussian.cpp
src/trapdoor/include/abe/: kp_abe.h  kp_abe_rns.h
src/trapdoor/include/obfuscation/: lwebpchcprf.h  lweconjunctionchcprf.h  lweconjunctionobfuscate.h  lwetbolinearsecret.h  obfuscatelp.h
src/trapdoor/include/subgaussian/: gsw.h  subgaussian.h
src/trapdoor/lib/abe/: kp_abe-impl.cpp  kp_abe.cpp  kp_abe_rns-impl.cpp  kp_abe_rns.cpp
src/trapdoor/lib/obfuscation/: lwebpchcprf-impl.cpp  lwebpchcprf.cpp  lweconjunctionchcprf-impl.cpp  lweconjunctionchcprf.cpp  lweconjunctionobfuscate-impl.cpp  lweconjunctionobfuscate.cpp  lwetbolinearsecret-impl.cpp  lwetbolinearsecret.cpp
src/trapdoor/lib/subgaussian/: gsw-impl.cpp  gsw.cpp  subgaussian-poly-impl.cpp  subgaussian.cpp
src/trapdoor/unittest/: UnitTestKPABErns.cpp  UnitTestTrapdoorSerialize.cpp
test/: Main_TestAll.cpp
test/CMake/: CMakeLists.txt  test_installed_PALISADEabe.sh
